# poscidyn

./: .env  .gitignore  404.html  LICENSE  README.md  device_memory_profile.pb  index.html  memory.prof  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  temp.py  thesis.code-workspace
checkpoints/: best_model.eqx  history.csv  history.jsonl  train_state.json
delftblue/: create_batch_file.sh  run_batch.sh  test_frequency_sweep_batched.sh
docs/: for-who-is-poscidyn.md  future-work.md  getting-started.md  index.md  limitations.md  poscidyn-in-a-nutshell.md  where-poscidyn-shines.md
for-who-is-poscidyn/: index.html
future-work/: index.html
ml_crash_course/: duffing_response.py
oscidyn/: __init__.py  constants.py  nonlinear_dynamics.py  solver.py
poscidyn-in-a-nutshell/: index.html
results/: test_train_state.eqx
scripts/: evaluate_trained_model.py  visualize_sweeps.py
search/: search_index.json
site/: index.html  objects.inv
slurm/: batch.sh
src/: main.py  modal_eom.py  modal_eom_diffrax.py  modal_eom_improved.py  model.py  model_other_dimensionalisation.py  models.py  nonlinear_dynamics.py  normal_form.py  solver.py  solver_jax.py  test_jax.py
tests/: circular_membrane_mode_shape.py  comparison_gamma.py  comparison_methods.py  duffing oscillator.py  duffing_frequency_response.jl  dynamic_response_jax.py  dynamic_response_scipy.py  extending.py  farbod_model.py  linear_case.py  model_test.py  quadraticNLslow.ipynb  quick_example.py  simple_linear_sdof.py  sym_breaking.py  test_auto.py  test_auto_oscillators.py  (+22 more)
(+617 files in other folders)
